--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
@@ -22,6 +22,18 @@ mermaid: true
 **[관련 포스팅]**
 
 
+[깃허브 블로그와 노션 연동하기 [배경]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0/)
+
+
+[깃허브 블로그와 노션 연동하기 [인프라]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%EC%9D%B8%ED%94%84%EB%9D%BC/)
+
+
+[깃허브 블로그와 노션 연동하기 [프로젝트]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8/)
+
+
+[깃허브 블로그와 노션 연동하기 [결과]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%EA%B2%B0%EA%B3%BC/)
+
+
 ### 배경
 
 
@@ -46,7 +58,7 @@ mermaid: true
 **[포스트를 업로드할 경우, 진행되는 프로세스]**
 
 
-![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20/1.png)
+![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/1.png)
 
 
 ### 프로젝트 구조
@@ -61,7 +73,7 @@ mermaid: true
 Posting Lambda는 “노션의 문서를 마크다운으로 추출하는 부분”을 담당하고, Indexing Lambda는 “포스팅을 구글 검색에 노출하는 부분”을 담당한다.
 
 
-![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20/2.png)
+![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/2.png)
 
 
 **[Infra]**
