--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 [인프라].md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 [인프라].md
@@ -16,6 +16,18 @@ mermaid: true
 **[관련 포스팅]**
 
 
+[깃허브 블로그와 노션 연동하기 [배경]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0/)
+
+
+[깃허브 블로그와 노션 연동하기 [인프라]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%EC%9D%B8%ED%94%84%EB%9D%BC/)
+
+
+[깃허브 블로그와 노션 연동하기 [프로젝트]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8/)
+
+
+[깃허브 블로그와 노션 연동하기 [결과]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%EA%B2%B0%EA%B3%BC/)
+
+
 ## 깃허브 블로그와 노션 연동하기 #인프라
 
 
