--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
@@ -49,16 +49,25 @@ mermaid: true
 **1번째 문제)** 노션이 마크다운 기반이지만, 마크다운의 완벽하게 호환되지 않는다. 그래서 깨지는 문법이 생각보다 많았고 이를 내가 직접 변환해야 했다. 
 
 
+예를 들어 `-` **`ABC`** 의 경우 마크다운으로 변환하면 아래의 사진처럼 깨진다.
+
+
+![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/1.png)
+
+
 **2번째 문제)** 1번의 이유로 노션과 마크다운 문서가 달라졌기에, 업데이트가 필요하면 노션이 아닌 Vscode와 같은 IDE에서 진행해야 했다.
 
 
-우선 위처럼 수작업이 진행되다보면, 노션과 블로그의 내용이 달라진다. 이것은 관리포인트가 두 곳으로 늘어나는 문제가 있다. 처음엔 많아봤자 수작업할 일이 얼마나 많겠어? 라고 생각했다. 하지만, 막상 블로그를 관리하다보니 내용을 업데이트할 일이 많았다. 또한, 노션을 오래 사용하다보니 대부분의 어셋이 있고 포스팅에서 이를 활용할 가능성이 크다.  그렇기에 노션에서 마크다운으로 추출하고 이를 블로그에 포스팅하는 자동화 프로젝트를 시작하게 되었다.
+우선 위처럼 수작업이 진행되다보면, 노션과 블로그의 내용이 달라진다. 이것은 관리포인트가 두 곳으로 늘어나는 문제가 있다. “많아봤자 수작업할 일이 얼마나 많겠어?” 라고 생각했다. 하지만, 막상 블로그를 관리하다보니 내용을 업데이트할 일이 많았다. 
+
+
+또한, 노션을 오래 사용하다보니 대부분의 어셋이 있고 포스팅에서 이를 활용할 가능성이 크다.  그렇기에 노션에서 마크다운으로 추출하고 이를 블로그에 포스팅하는 자동화 프로젝트를 시작하게 되었다.
 
 
 **[포스트를 업로드할 경우, 진행되는 프로세스]**
 
 
-![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/1.png)
+![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/2.png)
 
 
 ### 프로젝트 구조
@@ -73,7 +82,7 @@ mermaid: true
 Posting Lambda는 “노션의 문서를 마크다운으로 추출하는 부분”을 담당하고, Indexing Lambda는 “포스팅을 구글 검색에 노출하는 부분”을 담당한다.
 
 
-![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/2.png)
+![Untitled.png](/assets/img/post/깃허브%20블로그와%20노션%20연동하기%20[배경]/3.png)
 
 
 **[Infra]**
