--- a/_posts/2023-11-15-Cpp정리.md
+++ b/_posts/2023-11-15-Cpp정리.md
@@ -93,16 +93,13 @@ bool operator>(const Entry &lhs, const Entry &rhs) {
 
 - 비트연산자
 
-| 연산자 | 설명                                                                                |
-| ------ | ----------------------------------------------------------------------------------- |
-| `&`    | 대응되는 비트가 모두 1이면 1을 반환함. (비트 AND 연산)                              |
-| `^`    | 대응되는 비트가 서로 다르면 1을 반환함. (비트 XOR 연산)                             |
-| `~`    | 비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)                   |
-| `<<`   | 지정한 수만큼 비트들을 전부 왼쪽으로 이동시킴. (left shift 연산)                    |
-| `>>`   | 부호를 유지하면서 지정한 수만큼 비트를 전부 오른쪽으로 이동시킴. (right shift 연산) |
-
-`|` : 대응되는 비트 중에서 하나라도 1이면 1을 반환함. (비트 OR 연산) 
-
+| &   | 대응되는 비트가 모두 1이면 1을 반환함. (비트 AND 연산)                              |
+| --- | ----------------------------------------------------------------------------------- |
+|     |                                                                                     | 대응되는 비트 중에서 하나라도 1이면 1을 반환함. (비트 OR 연산) |
+| ^   | 대응되는 비트가 서로 다르면 1을 반환함. (비트 XOR 연산)                             |
+| ~   | 비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)                   |
+| <<  | 지정한 수만큼 비트들을 전부 왼쪽으로 이동시킴. (left shift 연산)                    |
+| >>  | 부호를 유지하면서 지정한 수만큼 비트를 전부 오른쪽으로 이동시킴. (right shift 연산) |
 
 - 삼항연산자(조건식 ? 반환값1 : 반환값2)
 - 포인터 연산자
