--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
@@ -5,7 +5,7 @@ date: 2024-03-11 09:00 +0900
 description: 깃허브 블로그와 노션 연동하기 [배경]
 category: [블로그, 자동화] 
 tags: [Notion, 자동화, 연동, 포스팅] 
-pin: false
+pin: true
 math: true
 mermaid: true
 ---
