--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -5,14 +5,11 @@ date: 2024-01-12 15:00 +0900
 description: 쿠버네티스 서비스 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Services, Network, CNI, Flannel] 
-image:
-  path: /assets/img/logo/Kubernetes/logo4.png
-  alt: Kubernetes Logo
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
-삽질을 통해 서비스 네트워크 이해하기
+삽질을 통해 파드 네트워크 이해하기
 <!--more-->
 
 
@@ -49,11 +46,11 @@ mermaid: true
 쿠버네티스는 리눅스 커널 기능 중 하나인 [netfilter](https://en.wikipedia.org/wiki/Netfilter)와 user space에 존재하는 인터페이스인 [iptables](https://en.wikipedia.org/wiki/Iptables)라는 소프트웨어를 이용하여 패킷 흐름을 제어한다. [netfilter](https://en.wikipedia.org/wiki/Netfilter)란 규칙기반 패킷 처리 엔진이며, kernel space에 위치하여 모든 오고 가는 패킷을 관찰한다. 그리고 규칙에 매칭되는 패킷을 발견하면, SRC/DST등을 바꾸는 등 미리 정의된 행동을 수행한다.
 
 
-![](/assets/img/post/서비스%20네트워크%20모델%20이해하기/1.webp)
+![1_Pz-NixxBDbSnuPGyp8UWHQ.webp](/assets/img/post/서비스%20네트워크%20모델%20이해하기/1.webp)
 
-<p align="center">
-[출처: https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg]
-</p>
+
+[출처: [https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg](https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg)]
+
 
 이제 앞으로 분석할 내용을 제대로 파악하려면, Iptables을 자세히 알아야 한다.
 
@@ -65,50 +62,50 @@ iptables는 리눅스 시스템에서 네트워크 트래픽을 제어하는 방
 
 
 > 💡 **관련 옵션 및 명령어**  
-> - **`S`**: 현재 설정된 iptables 규칙을 출력한다.  
+> - **`S`**: 현재 설정된 iptables 규칙을 출력합니다.  
 >   
-> - **`t nat`**: 'nat' 테이블을 대상으로 작업을 수행한다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법이다.
+> - **`t nat`**: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.  
 >   
-> - **`N`**: 새로운 체인을 생성한다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성한다.  
+> - **`N`**: 새로운 체인을 생성합니다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.  
 >   
-> - **`A`**: 규칙을 체인의 끝에 추가한다. 예를 들어, **`A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ`**는 'KUBE-EXT-CVG3OEGEH7H5P3HQ' 체인의 끝에 규칙을 추가하며, 이 규칙은 패킷을 'KUBE-SVC-CVG3OEGEH7H5P3HQ' 체인으로 점프시킨다.
+> - **`A`**: 규칙을 체인의 끝에 추가합니다. 예를 들어, **`A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ`**는 'KUBE-EXT-CVG3OEGEH7H5P3HQ' 체인의 끝에 규칙을 추가하며, 이 규칙은 패킷을 'KUBE-SVC-CVG3OEGEH7H5P3HQ' 체인으로 점프시킵니다.  
 >   
-> - **`d`**: 목적지 주소를 지정한다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미이다.
+> - **`d`**: 목적지 주소를 지정합니다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.  
 >   
-> - **`-s`** 옵션은 소스 IP 주소를 지정하는 데 사용된다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미한다.  
+> - **`-s`** 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.  
 >   
-> - **`p`**: 프로토콜을 지정한다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미이다.
+> - **`p`**: 프로토콜을 지정합니다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.  
 >   
-> - **`m comment`**: comment 모듈을 사용하라는 의미이다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용된다.
+> - **`m comment`**: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.  
 >   
-> - **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정한다.  
+> - **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정합니다.  
 >   
-> - **`-dport`**: 대상 포트를 지정한다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미이다.
+> - **`-dport`**: 대상 포트를 지정합니다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.  
 >   
-> - **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정한다. 예를 들어, **`j KUBE-SVC-UQMCRMJZLI3FTLDP`**는 패킷을 'KUBE-SVC-UQMCRMJZLI3FTLDP' 체인으로 점프시키라는 의미이다.
+> - **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다. 예를 들어, **`j KUBE-SVC-UQMCRMJZLI3FTLDP`**는 패킷을 'KUBE-SVC-UQMCRMJZLI3FTLDP' 체인으로 점프시키라는 의미입니다.  
 >   
-> - **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용된다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미한다.
+> - **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
-	- **`S`**: 현재 설정된 iptables 규칙을 출력한다.
-	- **`t nat`**: 'nat' 테이블을 대상으로 작업을 수행한다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법이다.
-	- **`N`**: 새로운 체인을 생성한다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성한다.
-	- **`A`**: 규칙을 체인의 끝에 추가한다. 예를 들어, **`A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ`**는 'KUBE-EXT-CVG3OEGEH7H5P3HQ' 체인의 끝에 규칙을 추가하며, 이 규칙은 패킷을 'KUBE-SVC-CVG3OEGEH7H5P3HQ' 체인으로 이동한다.
-	- **`d`**: 목적지 주소를 지정한다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미이다.
-	- **`-s`** 옵션은 소스 IP 주소를 지정하는 데 사용된다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미한다.
-	- **`p`**: 프로토콜을 지정한다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미이다.
-	- **`m comment`**: comment 모듈을 사용하라는 의미이다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용된다.
-	- **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정한다.
-	- **`-dport`**: 대상 포트를 지정한다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미이다.
-	- **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정한다. 예를 들어, **`j KUBE-SVC-UQMCRMJZLI3FTLDP`**는 패킷을 'KUBE-SVC-UQMCRMJZLI3FTLDP' 체인으로 점프시키라는 의미이다.
-	- **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용된다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미한다.
+	- **`S`**: 현재 설정된 iptables 규칙을 출력합니다.
+	- **`t nat`**: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.
+	- **`N`**: 새로운 체인을 생성합니다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.
+	- **`A`**: 규칙을 체인의 끝에 추가합니다. 예를 들어, **`A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ`**는 'KUBE-EXT-CVG3OEGEH7H5P3HQ' 체인의 끝에 규칙을 추가하며, 이 규칙은 패킷을 'KUBE-SVC-CVG3OEGEH7H5P3HQ' 체인으로 점프시킵니다.
+	- **`d`**: 목적지 주소를 지정합니다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.
+	- **`-s`** 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.
+	- **`p`**: 프로토콜을 지정합니다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.
+	- **`m comment`**: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.
+	- **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정합니다.
+	- **`-dport`**: 대상 포트를 지정합니다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.
+	- **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다. 예를 들어, **`j KUBE-SVC-UQMCRMJZLI3FTLDP`**는 패킷을 'KUBE-SVC-UQMCRMJZLI3FTLDP' 체인으로 점프시키라는 의미입니다.
+	- **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
-이제 서비스의 Cluster IP Type부터 살펴본다.
-
-
-### Cluster IP
+이제 서비스의 ClusterIP Type부터 살펴본다.
 
 
-Cluster IP Type은 쿠버네티스안에서 사용될 수 있는 IP를 할당한다. Cluster IP와 파드를 연결하면, 어느 노드에서든 Cluster IP로 해당 파드에 접속할 수 있다. 
+### ClusterIP
+
+
+ClusterIP는 클러스터 안에서 사용되는 고정 IP이다. ClusterIP와 파드를 연결하면, 어느 노드에서든 ClusterIP로 해당 파드에 접속할 수 있다. 
 
 
 실습 환경은 다음과 같다. 파드는 디플로이먼트로 배포가 된 4개의 파드이며, 서비스는 4개의 파드 목록을 가지고 있다. (사진으로 하려다가, 실습을 다시 하는 경우를 고려하여, 코드블락으로 진행했다.)
@@ -135,7 +132,7 @@ ip-10-32-11-62.ap-northeast-2.compute.internal   Ready    control-plane,master  
 ```
 
 
-이제 iptables의 규칙을 확인한다. 아래의 명령어 결과를 보면, 해당 IP로 들어오는 패킷은 모두 `KUBE-SVC-GBTMB5ZTD56ECL5F`으로 `80` port로 보내진다.
+이제 iptables의 규칙을 확인한다. 아래의 명령어 결과를 보면, 해당 IP로 들어오는 패킷은 모두 `KUBE-SVC-GBTMB5ZTD56ECL5F`으로 80port로 보내진다.
 
 
 ```bash
@@ -178,7 +175,10 @@ iptables -S -t nat | grep KUBE-SEP-KYPXHCLNNXAPFHUW
 ### NodePort
 
 
-똑같이 `Netfilter`를 이용하며, 위의 ClusterIP를 이용한다. NodePort라는 새로운 규칙을 만들어, 해당 노드에 접근한 트래픽 중, 설정한 “포트”에 맞는 트래픽을 **모두 서비스의 Cluster IP**로 넘기는 방식이다. Cluster IP로 넘겨지면 위에서 설명한 방식대로 알맞은 파드로 전달된다.
+NodePort는 해당 노드에 접근한 트래픽 중, 설정한 “포트”에 맞는 트래픽을 **모두 서비스의 ClusterIP**로 넘기는 방식이다. NodePort 방식 또한 똑같이 `Netfilter`를 이용하며, 위의 ClusterIP를 이용한다. 노드 단위에서 특정 포트로 들어오는 트래픽을 받아 ClusterIP로 넘겨준다. ClusterIP로 넘겨지면 알맞은 파드로 전달된다.
+
+
+> **“externalTrafficPolicy” 옵션을 Local로 설정하면 해당 노드에 배치된 파드로만 접속된다고 한다. 이러면 SNAT이 필요하지 않아, 클라이언트 IP가 보존된다.**
 
 
 이제 실습을 진행해 보며, 내용을 확인해본다.
@@ -309,10 +309,20 @@ $ iptables -S -t nat | grep KUBE-SVC-5N7WIXIG6FFV5MSL
 ### Load Balancer
 
 
-로드밸런서 타입은 쿠버네티스 자체로 구현할 수 없고, 외부 로드밸런서와 연동되어 작동한다. NodePort 타입으로 서비스를 작동하면, 사용자는 주로 하나의 노드에 대해서 접근한다. 
+로드밸런서 타입은 쿠버네티스 자체로 구현할 수 없고, **외부 로드밸런서와 연동되어 작동한다.** NodePort 타입으로 서비스를 작동하면, 사용자는 주로 하나의 노드에 대해서 접근한다. 
 
 
 로드밸런서는 간단하다. 외부의 로드밸런서 IP로 클라이언트가 접속을 하면, 규칙에 의해 쿠버네티스 클러스터 노드로 접근을 한다.(로드밸런서이니, 노드는 모두 공평한 부하를 받는다.) 그러면 NodePort에서 진행했던 과정이 일어난다.(로드밸런서 타입은 자동으로 노드 포트를 하나 점유한다.)
+
+
+**[vs NodePort]**
+
+
+NodePort를 이용하면, 하나의 노드로 들어와 알맞은 파드로 다시 라우팅된다. 만약, 파드가 각기 다른 노드에 존재한다고하면, 1번 노드로 들어와 2번 노드의 파드로 이동할 수 있다. Client → Node → Node → Pod 이런 식으로 중간에 불필요한 단계를 거쳐 밸런싱된다. (서비스 자체가 밸런싱되므로) 
+또한, 들어오는 트래픽은 하나의 노드로 고정되므로 트래픽이 몰린다. 이를 해결하고자 로드밸런싱 타입이 존재한다. 로드밸런싱 타입은 노드 앞단에 위치하여, 들어가는 노드 자체를 분산한다.
+
+
+실제 로드밸런서에서 엔드포인트(여기서는 파드를 의미함)로 직접 트래픽을 전달하기도 한다. **외부의 로드밸런서 IP로 클라이언트가 접속을 하면, 규칙에 의해 쿠버네티스 클러스터 노드로 접근을 한다.** 로드밸런서이니, 노드는 모두 공평한 부하를 받는다. 그러면 NodePort에서 진행했던 과정이 일어난다. 
 
 
 ```bash
@@ -364,23 +374,27 @@ Pod2 responses: 48
 ```
 
 
-### **외부와 서비스와의 통신은 다음과 같이 동작한다.**
+### **외부와의 통신 방식**
 
 - **NodePort**
 
-똑같이 Netfilter를 이용한다. 다만, 여기서는 Cluster IP를 이용한다. NodePort라는 새로운 규칙을 만들어, 해당 노드에 접근한 트래픽중, 설정한 “포트”에 맞는 트래픽을 모두 서비스의 Cluster IP로 넘깁니다. Cluster IP로 넘겨지면 위에서 설명한 방식대로 알맞은 파드로 전달된다.
+NodePort는 노드로 들어오는 트래픽 중 특정 포트를 열어 외부의 접근을 허용한다. ClusterIP 상위 Layer라고 생각하면 된다. 특정 포트로 들어온 트래픽은 ClusterIP와 같이 작동한다. 즉, ClusterIP로 넘겨지면 위에서 설명한 방식대로 알맞은 파드로 전달됩니다.
 
 - **Load Balancer**
 
-로드밸런서 타입은 자동으로 노드 포트를 하나 점유한다. 즉, NodePort 상위의 기능이라고 생각하면 된다. 로드밸런서 타입은 쿠버네티스 자체로 구현할 수 없고, 외부 로드밸런서와 연동되어 작동한다. NodePort 타입으로 서비스를 작동하면, 사용자는 주로 하나의 노드에 대해서 접근한다. **외부의 로드밸런서 IP로 클라이언트가 접속을 하면, 규칙에 의해 쿠버네티스 클러스터 노드로 접근을 한다.** 로드밸런서이니, 노드는 모두 공평한 부하를 받는다. 그러면 NodePort에서 진행했던 과정이 일어난다. 
-
-
-```bash
-service-lb-test       LoadBalancer   10.43.227.123   <pending>     80:30135/TCP   2s
-```
+외부에는 하나의 엔드포인트를 주로 제공하니 NodePort 방식으로 트래픽을 받으면 1개의 노드로 모든 트래픽을 받게된다. 노드로 트래픽이 들어와서 ClusterIP Type과 같이 다시 로드밸런싱이 되어 여러 엔드포인트로 분산되겠지만, 하나의 노드에 모든 트래픽이 충분히 부담된다. 그렇기에 LoadBlancer 타입은 부하분산 자체를 노드 scope에서 진행한다. 외부 로드밸런서와 연결되어, 트래픽이 여러 노드로 분산된다. 여기에 **`externalTrafficPolicy=local`**로 설정한다면 네트워크 부하를 줄일 수 있다.
 
 
 ### 참고자료
+
+
+[https://kubernetes.io/ko/docs/concepts/services-networking/service/](https://kubernetes.io/ko/docs/concepts/services-networking/service/)
+
+
+[https://www.eksworkshop.com/docs/networking/](https://www.eksworkshop.com/docs/networking/)
+
+
+[https://coffeewhale.com/packet-network3](https://coffeewhale.com/packet-network3)
 
 
 [https://gasidaseo.notion.site/K8S-Service-1-f095388c48a84841b09a13b582f374c8](https://gasidaseo.notion.site/K8S-Service-1-f095388c48a84841b09a13b582f374c8)
