--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -9,7 +9,7 @@ pin: true
 math: true
 mermaid: true
 ---
-삽질을 통해 파드 네트워크 이해하기
+여러 실험을 통해 서비스 네트워크 이해하기
 <!--more-->
 
 
@@ -86,18 +86,6 @@ iptables는 리눅스 시스템에서 네트워크 트래픽을 제어하는 방
 >   
 > - **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
-	- **`S`**: 현재 설정된 iptables 규칙을 출력합니다.
-	- **`t nat`**: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.
-	- **`N`**: 새로운 체인을 생성합니다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.
-	- **`A`**: 규칙을 체인의 끝에 추가합니다. 예를 들어, **`A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ`**는 'KUBE-EXT-CVG3OEGEH7H5P3HQ' 체인의 끝에 규칙을 추가하며, 이 규칙은 패킷을 'KUBE-SVC-CVG3OEGEH7H5P3HQ' 체인으로 점프시킵니다.
-	- **`d`**: 목적지 주소를 지정합니다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.
-	- **`-s`** 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.
-	- **`p`**: 프로토콜을 지정합니다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.
-	- **`m comment`**: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.
-	- **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정합니다.
-	- **`-dport`**: 대상 포트를 지정합니다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.
-	- **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다. 예를 들어, **`j KUBE-SVC-UQMCRMJZLI3FTLDP`**는 패킷을 'KUBE-SVC-UQMCRMJZLI3FTLDP' 체인으로 점프시키라는 의미입니다.
-	- **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
 이제 서비스의 ClusterIP Type부터 살펴본다.
 
