--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -9,7 +9,7 @@ pin: true
 math: true
 mermaid: true
 ---
-여러 실험을 통해 서비스 네트워크 이해하기
+삽질을 통해 파드 네트워크 이해하기
 <!--more-->
 
 
@@ -21,11 +21,11 @@ mermaid: true
 
 프록시 서버는 즉, 서비스는 다음과 같은 요구사항을 만족해야 한다.
 
-1. 스스로 내구성이 있어야 하며, 장애에 대응할 수 있어야 한다.
-2. 트래픽을 전달할 서버 리스트를 가지고 있어야 한다.
-3. 서버 리스트 내 서버들이 정상적인지 확인할 수 있는 방법을 알아야 한다.
+1. 스스로 내구성이 있어야 하며, 장애에 대응할 수 있어야 한다.(가용성)
+2. 트래픽을 전달할 서버 리스트를 가지고 있어야 한다.(EndPoint)
+3. 서버 리스트 내 서버들이 정상적인지 확인할 수 있는 방법을 알아야 한다.(Health Check)
 
-현재의 서비스는 위의 요구사항을 만족한다. 어떤 참고 자료에서는 아래와 같은 말을 한다.
+현재의 서비스는 위의 요구사항을 만족한다. 어떤 분은 아래와 같은 말을 한다.
 
 
 > 쿠버네티스 개발자들은 Service라는 리소스를 통해 이 문제를 우아하게 해결했다.
@@ -86,17 +86,26 @@ iptables는 리눅스 시스템에서 네트워크 트래픽을 제어하는 방
 >   
 > - **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
-
-이제 서비스의 ClusterIP Type부터 살펴본다.
-
+	- **`S`**: 현재 설정된 iptables 규칙을 출력합니다.
+	- **`t nat`**: 'nat' 테이블을 대상으로 작업을 수행합니다. NAT(Network Address Translation)은 IP 패킷의 TCP/UDP 포트 번호와 소스 및 목적지 IP 주소를 재작성하는 방법입니다.
+	- **`N`**: 새로운 체인을 생성합니다. 예를 들어, **`N KUBE-SVC-ERIFXISQEP7F7OF4`**는 'KUBE-SVC-ERIFXISQEP7F7OF4'라는 이름의 새 체인을 생성합니다.
+	- **`A`**: 규칙을 체인의 끝에 추가합니다. 예를 들어, **`A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ`**는 'KUBE-EXT-CVG3OEGEH7H5P3HQ' 체인의 끝에 규칙을 추가하며, 이 규칙은 패킷을 'KUBE-SVC-CVG3OEGEH7H5P3HQ' 체인으로 점프시킵니다.
+	- **`d`**: 목적지 주소를 지정합니다. 예를 들어, **`d 10.43.239.29/32`**는 목적지 IP 주소가 '10.43.239.29/32'인 패킷에 규칙을 적용하라는 의미입니다.
+	- **`-s`** 옵션은 소스 IP 주소를 지정하는 데 사용됩니다. 예를 들어, **`-s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하는 패킷에 규칙이 적용된다는 것을 의미합니다.
+	- **`p`**: 프로토콜을 지정합니다. **`p tcp`**는 TCP 프로토콜을 사용하는 패킷에 규칙을 적용하라는 의미입니다.
+	- **`m comment`**: comment 모듈을 사용하라는 의미입니다. 이 모듈은 iptables 규칙에 주석을 추가하는 데 사용됩니다.
+	- **`-comment`**: comment 모듈에 대한 옵션으로, 주석을 지정합니다.
+	- **`-dport`**: 대상 포트를 지정합니다. 예를 들어, **`-dport 80`**는 대상 포트가 80인 패킷에 규칙을 적용하라는 의미입니다.
+	- **`j`**: 패킷이 규칙에 일치할 경우 수행할 작업을 지정합니다. 예를 들어, **`j KUBE-SVC-UQMCRMJZLI3FTLDP`**는 패킷을 'KUBE-SVC-UQMCRMJZLI3FTLDP' 체인으로 점프시키라는 의미입니다.
+	- **`!`** 기호는 그 뒤에 오는 조건을 부정하는 데 사용됩니다. 예를 들어,  **`! -s 10.42.0.0/16`**은 '10.42.0.0/16' 네트워크에서 시작하지 않는 패킷에 규칙이 적용된다는 것을 의미합니다.
 
 ### ClusterIP
 
 
-ClusterIP는 클러스터 안에서 사용되는 고정 IP이다. ClusterIP와 파드를 연결하면, 어느 노드에서든 ClusterIP로 해당 파드에 접속할 수 있다. 
+ClusterIP는 클러스터 안에서 사용되는 고정 IP이다. ClusterIP와 파드를 연결하면, 클러스터 어디서든 해당 IP로 알맞는 파드에 접속할 수 있다. 
 
 
-실습 환경은 다음과 같다. 파드는 디플로이먼트로 배포가 된 4개의 파드이며, 서비스는 4개의 파드 목록을 가지고 있다. (사진으로 하려다가, 실습을 다시 하는 경우를 고려하여, 코드블락으로 진행했다.)
+실습 환경은 다음과 같다. 파드는 디플로이먼트로 배포가 된 4개의 파드이며, 서비스는 4개의 파드 목록을 가지고 있다. (사진으로 하려다 실습을 다시 하는 경우를 고려하여, CodeBlock으로 기록합니다.)
 
 
 ![Untitled.png](/assets/img/post/서비스%20네트워크%20모델%20이해하기/2.png)
@@ -166,7 +175,8 @@ iptables -S -t nat | grep KUBE-SEP-KYPXHCLNNXAPFHUW
 NodePort는 해당 노드에 접근한 트래픽 중, 설정한 “포트”에 맞는 트래픽을 **모두 서비스의 ClusterIP**로 넘기는 방식이다. NodePort 방식 또한 똑같이 `Netfilter`를 이용하며, 위의 ClusterIP를 이용한다. 노드 단위에서 특정 포트로 들어오는 트래픽을 받아 ClusterIP로 넘겨준다. ClusterIP로 넘겨지면 알맞은 파드로 전달된다.
 
 
-> **“externalTrafficPolicy” 옵션을 Local로 설정하면 해당 노드에 배치된 파드로만 접속된다고 한다. 이러면 SNAT이 필요하지 않아, 클라이언트 IP가 보존된다.**
+> **“externalTrafficPolicy” 옵션을 Local로 설정하면 해당 노드에 배치된 파드로만 접속된다고 한다.   
+> 이러면 SNAT이 필요하지 않아, 클라이언트 IP가 보존된다.**
 
 
 이제 실습을 진행해 보며, 내용을 확인해본다.
@@ -300,34 +310,30 @@ $ iptables -S -t nat | grep KUBE-SVC-5N7WIXIG6FFV5MSL
 로드밸런서 타입은 쿠버네티스 자체로 구현할 수 없고, **외부 로드밸런서와 연동되어 작동한다.** NodePort 타입으로 서비스를 작동하면, 사용자는 주로 하나의 노드에 대해서 접근한다. 
 
 
-로드밸런서는 간단하다. 외부의 로드밸런서 IP로 클라이언트가 접속을 하면, 규칙에 의해 쿠버네티스 클러스터 노드로 접근을 한다.(로드밸런서이니, 노드는 모두 공평한 부하를 받는다.) 그러면 NodePort에서 진행했던 과정이 일어난다.(로드밸런서 타입은 자동으로 노드 포트를 하나 점유한다.)
+로드밸런스 타입은 별도의 외부 IP가 존재한다. 클라이언트가 외부 IP를 통해 접근하면, 적절한 규칙으로 노드를 배정해준다. (로드밸런서이니, 노드는 모두 공평한 부하를 받는다.) 그러면 NodePort에서 진행했던 과정이 일어난다.(로드밸런서 타입은 자동으로 노드 포트를 하나 점유한다.)
 
 
 **[vs NodePort]**
 
 
-NodePort를 이용하면, 하나의 노드로 들어와 알맞은 파드로 다시 라우팅된다. 만약, 파드가 각기 다른 노드에 존재한다고하면, 1번 노드로 들어와 2번 노드의 파드로 이동할 수 있다. Client → Node → Node → Pod 이런 식으로 중간에 불필요한 단계를 거쳐 밸런싱된다. (서비스 자체가 밸런싱되므로) 
+NodePort를 이용하면, 하나의 노드로 들어와 알맞은 파드로 다시 라우팅된다. 만약, 파드가 각기 다른 노드에 존재한다고하면, 1번 노드로 들어와 2번 노드의 파드로 이동할 수 있다. Client → Node1 → Node2 → Pod 이런 식으로 중간에 불필요한 단계를 거쳐 밸런싱된다. (서비스 자체가 밸런싱되므로) 
 또한, 들어오는 트래픽은 하나의 노드로 고정되므로 트래픽이 몰린다. 이를 해결하고자 로드밸런싱 타입이 존재한다. 로드밸런싱 타입은 노드 앞단에 위치하여, 들어가는 노드 자체를 분산한다.
 
 
 실제 로드밸런서에서 엔드포인트(여기서는 파드를 의미함)로 직접 트래픽을 전달하기도 한다. **외부의 로드밸런서 IP로 클라이언트가 접속을 하면, 규칙에 의해 쿠버네티스 클러스터 노드로 접근을 한다.** 로드밸런서이니, 노드는 모두 공평한 부하를 받는다. 그러면 NodePort에서 진행했던 과정이 일어난다. 
 
 
-```bash
-service-lb-test       LoadBalancer   10.43.227.123   <pending>     80:30135/TCP   2s
-```
-
-
 ## 요약
 
 
-크게 내용을 요약하면 다음과 같다.
+실습했던 내용을 다시 한번 요약한다.
 
 
 ### **서비스의 Cluster IP에 대해서는 다음과 같은 방식으로 동작한다.**
 
 
-서비스의 동작은 전적으로 **kube-proxy**가 담당하며, 별다른 리소스를 소모하지 않고,  iptables(netfilter)mode를 이용하여 간단하게 netfilter를 통해 특정 패킷이 오면 정해둔 행동을 취한다. 여기서는 주로, Network Address Translation “**NAT”** 기능을 수행한다. 이를 통해, 실질적인 인터페이스 없이 **reverse-proxy** 역할을 서비스가 할 수 있게 된다. 그렇다면, kube-proxy는 어떤 역할을 수행하는가? kube-proxy는 API 서버로 부터 파드의 **Health check, 혹은 파드의 부하상태를** 통해 엔드포인트를 관리한다. 또, 현재의 엔드포인트에 맞게 Netfilter의 규칙을 수정한다. 즉, kube-proxy는 로드밸런서에서의 manager server의 역할을 담당한다.
+서비스의 동작은 ‘**kube-proxy’**가 담당하며, 별다른 리소스를 소모하지 않고,  iptables(netfilter)를 이용하여 커널영역에서 특정 패킷이 오면 정해둔 행동을 취한다. 여기서는 주로, Network Address Translation “**NAT”** 기능을 수행한다. 이를 통해, 실질적인 인터페이스 없이 **reverse-proxy** 역할을 서비스가 할 수 있게 된다. 
+그렇다면, kube-proxy는 어떤 역할을 수행하는가? kube-proxy는 API 서버로 파드의 **Health check, 혹은 파드의 부하상태를** 통해 엔드포인트를 관리한다. 또, 현재의 엔드포인트에 맞게 Netfilter의 규칙을 수정한다. 즉, kube-proxy는 로드밸런서에서의 manager server의 역할을 담당한다.
 
 
 **Q. 서비스를 생성하고, 이후 Selector 조건에 맞는 파드를 생성하면, 해당 파드도 엔드포인트에 추가되는가?**
@@ -364,9 +370,12 @@ Pod2 responses: 48
 
 ### **외부와의 통신 방식**
 
+
+ClusterIP는 클러스터 내부에서만 통신할 수 있다. 외부로 노출하려면, NodePort 혹은 Load Blancer 타입의 서비스를 사용한다.
+
 - **NodePort**
 
-NodePort는 노드로 들어오는 트래픽 중 특정 포트를 열어 외부의 접근을 허용한다. ClusterIP 상위 Layer라고 생각하면 된다. 특정 포트로 들어온 트래픽은 ClusterIP와 같이 작동한다. 즉, ClusterIP로 넘겨지면 위에서 설명한 방식대로 알맞은 파드로 전달됩니다.
+NodePort는 노드로 들어오는 트래픽 중 특정 포트를 열어 외부의 접근을 허용한다. ClusterIP 상위 Layer라고 생각하면 된다. 특정 포트로 들어온 트래픽은 ClusterIP와 같이 작동한다. 즉, ClusterIP로 넘겨지면 위에서 설명한 서비스의 방식대로 알맞은 파드로 전달된다.
 
 - **Load Balancer**
 
