--- a/_posts/2024-03-06-Lambda 정리.md
+++ b/_posts/2024-03-06-Lambda 정리.md
@@ -40,6 +40,16 @@ AWS Lambda 정리
 >   
 > - Fargate
 
+	- AWS Lambda
+	- DynamoDB
+	- AWS Cognito
+	- AWS API Gateway
+	- Amazon S3
+	- AWS SNS & SQS
+	- AWS Kinesis Data Firehose
+	- Aurora Serverless
+	- Step Functions
+	- Fargate
 
 ## Lambda
 
@@ -59,7 +69,7 @@ AWS의 서버리스 서비스 중 하나로 **이벤트 핸들러 방식의** **
 [여기](https://aws.amazon.com/lambda/pricing/)에서 자세한 내용을 살펴볼 수 있다. 기본적으로 과금은 요청횟수와, 람다함수 실행시간을 기준으로 과금한다.
 
 
-기본적으로 1,000,000개의 요청은 무료이고, 이후부터 100만개의 요청당 0.2달러의 요금을 부과한다. 
+기본적으로 1,000,000개의 요청은 무료이고, 이후부터 100만 개의 요청당 0.2달러의 요금을 부과한다. 
 
 
 초기 400,000GB/s는 무료이며, 600,00GB/s에 대해 1달러의 요금을 부과한다. 
@@ -68,10 +78,10 @@ AWS의 서버리스 서비스 중 하나로 **이벤트 핸들러 방식의** **
 여기서 GB는 메모리용량을 의미한다. 즉 메모리 1GB로 동작하는 람다 함수에 대해 400,000초까지는 무료이며 이후 600,000초가 경과했을 때마다 1달러를 부과한다. 
 
 
-내가 실제로 10월부터 썼던 람다함수는 메모리사이즈가 256MB, 100ms으로 아직 과금되지도 않았다.
+내가 실제로 10월부터 썼던 람다함수는 메모리사이즈가 256MB, 100ms로 아직 과금되지도 않았다.
 
 
-![Untitled.png](/assets/img/post/Lambda%20정리/1.png)
+![Untitled.png](/assets/img/post/Lambda%20정리/2.png)
 
 
 ### Limit
@@ -91,11 +101,11 @@ AWS의 서버리스 서비스 중 하나로 **이벤트 핸들러 방식의** **
 ### 단점
 
 
-위에서 람다의 특징과 장점을 위주로 알아봤다. 이론상으로 개발자는 인프라를 신경쓰지 않고 코드만 작성하면 된다. 하지만 아래와 같은 단점도 있다.
+위에서 람다의 특징과 장점을 위주로 알아봤다. 이론상으로 개발자는 인프라를 신경 쓰지 않고 코드만 작성하면 된다. 하지만 아래와 같은 단점도 있다.
 
 1. 리소스 제한: 최대 실행시간, 환경변수 용량 등의 제한이 있다.
 2. Stateless: 람다는 함수가 호출되면, 새로운 컨테이너를 띄우는 방식이다. 별도의 상태를 저장하지 않는다.
-3. Cold Start: 람다는 리소스를 효율적으로 사용하기 위해, 오랫동안 사용하지 않을 경우 컴퓨팅파워를 잠시 꺼둔다. 즉, 요청이 오랜만에 오면 어느정도 딜레이가 걸린다.
+3. Cold Start: 람다는 리소스를 효율적으로 사용하기 위해 오랫동안 사용하지 않을 경우 컴퓨팅파워를 잠시 꺼둔다. 즉, 요청한 기간이 길어지면 추가적인 딜레이가 걸린다.
 4. 동시성 제한: 동시에 실행할 수 있는 람다함수의 개수를 최대 1,000개로 제한된다.
 
 물론, 여러 방법을 사용하여 위의 단점을 상쇄할 수 있다. 예를 들어 3번과 같은 경우 람다를 주기적으로 호출하거나 메모리 스펙을 올려 성능을 업그레이드하는 방식으로 해결할 수 있다. 
@@ -104,7 +114,7 @@ AWS의 서버리스 서비스 중 하나로 **이벤트 핸들러 방식의** **
 ### AWS SAM
 
 
-실제 람다를 사용할 때는 AWS SAM을 이용하면 매우 편리하다. AWS SAM은 Serverless Application Model으로 AWS 환경에서 제공하는 서버리스용 오픈소스 프레임워크이다. 기본적으로 CloudFormation이 확장된 형태이다. SAM 탬플릿이 배포당시 CloudFormation 탬플릿으로 변환된다.
+실제 람다를 사용할 때는 AWS SAM을 이용하면 매우 편리하다. AWS SAM은 Serverless Application Model으로 AWS 환경에서 제공하는 서버리스용 오픈소스 프레임워크이다. 기본적으로 CloudFormation이 확장된 형태이다. SAM 탬플릿이 배포 당시 CloudFormation 탬플릿으로 변환된다.
 
 
 AWS SAM을 사용하면 아래의 애플리케이션을 구축할 때, 아주 편리하게 이용할 수 있다. SAM 명령어를 통해 **Docker기반으로 로컬에서도 테스트가 가능**하며, **테스트 후** **`sam deploy`** **명령어를 통해 쉽게 배포**할 수 있다.
@@ -120,5 +130,5 @@ AWS SAM 프로젝트는 [GitHub](https://github.com/aws/serverless-application-m
 아래는 블로그와 노션을 연동하는 용도로 제작한 Lambda + API Gateway에 대한 설정이다.
 
 
-![Untitled.png](/assets/img/post/Lambda%20정리/2.png)
+![Untitled.png](/assets/img/post/Lambda%20정리/3.png)
 
