--- a/_posts/2024-03-06-S3 이벤트 실습.md
+++ b/_posts/2024-03-06-S3 이벤트 실습.md
@@ -24,7 +24,7 @@ AWS S3 이벤트 다뤄보기
 ### S3 이벤트 스키마
 
 
-S3 이벤트의 구조의 자세한 내용은 [AWS 문서](https://docs.aws.amazon.com/ko_kr/AmazonS3/latest/userguide/notification-content-structure.html)에서 확인할 수 있다. 아래의 실습 코드에서도 어느정도 예측할 수 있듯이 Records를 통해 한번 감싸지며, 나머지 키는 아래에서 확인할 수 있다.
+S3 이벤트의 구조의 자세한 내용은 [AWS 문서](https://docs.aws.amazon.com/ko_kr/AmazonS3/latest/userguide/notification-content-structure.html)에서 확인할 수 있다. 아래의 실습 코드에서도 예측할 수 있듯이 Records를 통해 한번 감싸지며, 나머지 키는 아래에서 확인할 수 있다.
 
 
 ```json
@@ -79,13 +79,13 @@ S3 이벤트의 구조의 자세한 내용은 [AWS 문서](https://docs.aws.amaz
 ### 람다 함수 생성
 
 
-**Lambda > 함수 생성**을 클릭한다. 새로 작성 옵션으로 람다를 생성하며, 런타임은 Python 3.11로 진행한다. 함수이름은 이후에 실습에서도 사용할 것이기에 편의상 JSONtoYAML으로 지어줬다. 함수에 들어가서 AWS 문서에서 나와있는 샘플 코드를 복사 붙여넣고 **Deploy** 버튼을 클릭하여 배포해준다.
+**Lambda > 함수 생성**을 클릭한다. 새로 작성 옵션으로 람다를 생성하며, 런타임은 Python 3.11로 진행한다. 함수이름은 이후에 실습에서도 사용할 것이기에 편의상 JSONtoYAML으로 지어줬다. 함수에 들어가서 AWS 문서에서 있는 샘플 코드를 복사하고 **Deploy** 버튼을 클릭하여 배포한다.
 
 
 코드의 내용을 자세히 살펴보자.
 
 
-S3 이벤트 스키마의 내용을 확인해보면 `event['Records'][0]['s3']['bucket']['name']`를 통해 버킷의 이름을 얻을 수 있다. 이후 유사한 방법으로 키를 얻고, aws sdk(boto3)를 사용하여 s3에 접근하여 객체를 얻어온다.
+S3 이벤트 스키마의 내용을 확인하면 `event['Records'][0]['s3']['bucket']['name']`를 통해 버킷의 이름을 얻을 수 있다. 이후 유사한 방법으로 키를 얻고, aws sdk(boto3)를 사용하여 s3에 접근하여 객체를 얻어온다.
 
 
 ```python
@@ -126,7 +126,7 @@ def lambda_handler(event, context):
 이벤트이름은 JSONtoYAML으로 지어줬고, 접미사에 `.json`을 입력하여 json 형식의 파일이 생성될 때만 이벤트 알림이 생성되도록 한다. 이벤트 유형으로는 `s3:ObjectCreated:*` 을 체크한다. 이후 대상에 Lambda 함수를 선택하고 위에서 생성한 Lambda 함수를 선택한다.
 
 
-![Untitled.png](/assets/img/post/S3%20이벤트%20실습/1.png)
+![Untitled.png](/assets/img/post/S3%20이벤트%20실습/5.png)
 
 
 ### 람다에 권한 부여
@@ -156,22 +156,22 @@ def lambda_handler(event, context):
 ```
 
 
-### 실행결과1
+### 실행 결과 1
 
 
-이제 test.json 파일을 S3에 업로드해본다. 람다의 실행결과는 CloudWatch Log를 통해서 확인할 수 있다. 정상적으로 Content Type이 출력된다.
+이제 test.json 파일을 S3에 업로드한다. 람다의 실행결과는 CloudWatch Log를 통해서 확인할 수 있다. 정상적으로 Content Type이 출력된다.
 
 
-![Untitled.png](/assets/img/post/S3%20이벤트%20실습/2.png)
+![Untitled.png](/assets/img/post/S3%20이벤트%20실습/6.png)
 
 
 ### 코드 수정
 
 
-이제 코드를 수정하여, JSON 파일이 들어오면 이를 YAML 형식으로 변경하는 함수를 작성해보자.
+이제 코드를 수정하여, JSON 파일이 들어오면 이를 YAML 형식으로 변경하는 함수를 작성한다.
 
 
-기존의 Content Type을 출력하는 코드를 제거하고 yaml 프레임워크를 통해 JSON 파일을 YAML 형식으로 변경하는 코드만 추가해주면 된다. 아래에서 `#S3 버킷에서 객체 가져오기` 주석 아래부분이 해당된다. 파일 형식을 변환하고 .yaml 으로 업로드해주면 끝난다. 
+기존의 Content Type을 출력하는 코드를 제거하고 yaml 프레임워크를 통해 JSON 파일을 YAML 형식으로 변경하는 코드만 추가한다. 아래에서 `#S3 버킷에서 객체 가져오기` 주석 아랫부분에 해당된다. 파일 형식을 변환하고 .yaml 으로 업로드하면 끝이다.
 
 
 코드 작업을 마무리하면 JSON 파일이 오면 YAML 형식으로 변환하여 .yaml 파일을 업로드하는 람다함수가 완성된다. 
@@ -251,16 +251,16 @@ _yaml                  lambda_function.py
 ### 실행결과2
 
 
-test.json 파일을 삭제한 후 다시 업로드를 하면 아래의 그림과 같이 yaml 파일도 추가된 것을 확인할 수 있다. 시간을 확인해보면 JSON 파일이 업로드된 후 30초후 YAML 파일이 생성되었다. 이제 구체적인 내용은 CloudWatch의 Log를 통해 확인해보자.
+test.json 파일을 삭제한 후 다시 업로드를 하면 아래의 그림과 같이 yaml 파일도 추가된 것을 확인할 수 있다. 시간을 확인하면 JSON 파일이 업로드된 후 30초 후 YAML 파일이 생성되었다. 이제 구체적인 내용은 CloudWatch의 Log를 통해 확인한다.
 
 
-![Untitled.png](/assets/img/post/S3%20이벤트%20실습/3.png)
+![Untitled.png](/assets/img/post/S3%20이벤트%20실습/7.png)
 
 
 CloudWatch에 접속하여 최근의 로그 스트림을 확인해보면 아래와 같이 Succesfully Log를 확인할 수 있다.
 
 
-![Untitled.png](/assets/img/post/S3%20이벤트%20실습/4.png)
+![Untitled.png](/assets/img/post/S3%20이벤트%20실습/8.png)
 
 
 S3는 용량이 큰 객체를 담는 저장소로 이미지, 영상 등이 주로 사용된다고 한다. 이미지를 업로드할 때 위의 실습과 같이 람다를 통해 썸네일을 생성하는 이미지를 제작하는 등 다양하게 사용될 것 같다.
