--- a/_posts/2024-03-06-S3 이벤트 실습.md
+++ b/_posts/2024-03-06-S3 이벤트 실습.md
@@ -79,7 +79,7 @@ S3 이벤트의 구조의 자세한 내용은 [AWS 문서](https://docs.aws.amaz
 ### 람다 함수 생성
 
 
-**Lambda > 함수 생성**을 클릭한다. 새로 작성 옵션으로 람다를 생성하며, 런타임은 Python 3.11로 진행한다. 함수이름은 이후에 실습에서도 사용할 것이기에 편의상 JSONtoYAML으로 지어줬다. 함수에 들어가서 AWS 문서에서 있는 샘플 코드를 복사하고 **Deploy** 버튼을 클릭하여 배포한다.
+**Lambda > 함수 생성**을 클릭한다. 새로 작성 옵션으로 람다를 생성하며, 런타임은 Python 3.11로 진행한다. 함수명은 이후에 실습에서도 사용할 것이기에 편의상 JSONtoYAML으로 지어줬다. 함수에 들어가서 AWS 문서에서 있는 샘플 코드를 복사하고 **Deploy** 버튼을 클릭하여 배포한다.
 
 
 코드의 내용을 자세히 살펴보자.
@@ -123,7 +123,7 @@ def lambda_handler(event, context):
 **Buckets > Properties > Event** 경로에서 이벤트 알림을 생성한다. 
 
 
-이벤트이름은 JSONtoYAML으로 지어줬고, 접미사에 `.json`을 입력하여 json 형식의 파일이 생성될 때만 이벤트 알림이 생성되도록 한다. 이벤트 유형으로는 `s3:ObjectCreated:*` 을 체크한다. 이후 대상에 Lambda 함수를 선택하고 위에서 생성한 Lambda 함수를 선택한다.
+이벤트 이름은 JSONtoYAML으로 지어줬고, 접미사에 `.json`을 입력하여 json 형식의 파일이 생성될 때만 이벤트 알림이 생성되도록 한다. 이벤트 유형으로는 `s3:ObjectCreated:*` 을 체크한다. 이후 대상에 Lambda 함수를 선택하고 위에서 생성한 Lambda 함수를 선택한다.
 
 
 ![Untitled.png](/assets/img/post/S3%20이벤트%20실습/5.png)
@@ -171,7 +171,7 @@ def lambda_handler(event, context):
 이제 코드를 수정하여, JSON 파일이 들어오면 이를 YAML 형식으로 변경하는 함수를 작성한다.
 
 
-기존의 Content Type을 출력하는 코드를 제거하고 yaml 프레임워크를 통해 JSON 파일을 YAML 형식으로 변경하는 코드만 추가한다. 아래에서 `#S3 버킷에서 객체 가져오기` 주석 아랫부분에 해당된다. 파일 형식을 변환하고 .yaml 으로 업로드하면 끝이다.
+기존의 Content Type을 출력하는 코드를 제거하고 yaml 프레임워크를 통해 JSON 파일을 YAML 형식으로 변경하는 코드만 추가한다. 아래에서 `#S3 버킷에서 객체 가져오기` 주석 아랫부분에 해당한다. 파일 형식을 변환하고 .yaml 으로 업로드하면 끝이다.
 
 
 코드 작업을 마무리하면 JSON 파일이 오면 YAML 형식으로 변환하여 .yaml 파일을 업로드하는 람다함수가 완성된다. 
@@ -238,7 +238,7 @@ zip -r jsontoyaml .
 ```
 
 
-실행결과 아래와 같은 목록이 출력되며, 이중에 zip 파일을 람다에 올리면 된다.
+명령어 실행결과는 아래와 같으며, zip 파일을 람다에 올리면 된다.
 
 
 ```bash
