--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
@@ -5,7 +5,7 @@ date: 2024-03-11 09:00 +0900
 description: 깃허브 블로그와 노션 연동하기 [배경]
 category: [블로그, 자동화] 
 tags: [Notion, 자동화, 연동, 포스팅] 
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
@@ -52,7 +52,7 @@ mermaid: true
 예를 들어 `-` **`ABC`** 의 경우 마크다운으로 변환하면 아래의 사진처럼 깨진다.
 
 
-![Untitled.png](/assets/img/post/%EA%B9%83%ED%97%88%EB%B8%8C%20%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80%20%EB%85%B8%EC%85%98%20%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0%20[%EB%B0%B0%EA%B2%BD]/4.png)
+![Untitled.png](/assets/img/post/%EA%B9%83%ED%97%88%EB%B8%8C%20%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80%20%EB%85%B8%EC%85%98%20%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0%20[%EB%B0%B0%EA%B2%BD]/1.png)
 
 
 **2번째 문제)** 1번의 이유로 노션과 마크다운 문서가 달라졌기에, 업데이트가 필요하면 노션이 아닌 Vscode와 같은 IDE에서 진행해야 했다.
@@ -82,7 +82,7 @@ mermaid: true
 Posting Lambda는 “노션의 문서를 마크다운으로 추출하는 부분”을 담당하고, Indexing Lambda는 “포스팅을 구글 검색에 노출하는 부분”을 담당한다.
 
 
-![Untitled.png](/assets/img/post/%EA%B9%83%ED%97%88%EB%B8%8C%20%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80%20%EB%85%B8%EC%85%98%20%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0%20[%EB%B0%B0%EA%B2%BD]/6.png)
+![Untitled.png](/assets/img/post/%EA%B9%83%ED%97%88%EB%B8%8C%20%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80%20%EB%85%B8%EC%85%98%20%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0%20[%EB%B0%B0%EA%B2%BD]/3.png)
 
 
 **[Infra]**
