--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 .md
@@ -67,7 +67,7 @@ mermaid: true
 **[포스트를 업로드할 경우, 진행되는 프로세스]**
 
 
-![Untitled.png](/assets/img/post/%EA%B9%83%ED%97%88%EB%B8%8C%20%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80%20%EB%85%B8%EC%85%98%20%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0%20[%EB%B0%B0%EA%B2%BD]/2.png)
+![Untitled.png](/assets/img/post/%EA%B9%83%ED%97%88%EB%B8%8C%20%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80%20%EB%85%B8%EC%85%98%20%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0%20[%EB%B0%B0%EA%B2%BD]/2-1.png)
 
 
 ### 프로젝트 구조
