--- a/_posts/2024-05-06-데이터베이스 정리.md
+++ b/_posts/2024-05-06-데이터베이스 정리.md
@@ -358,8 +358,7 @@ NoSQL은 수평적으로 확장될 가능성이 높다. 이때, 데이터의 일
 
 각 노드가 네트워크가 차단되어도, 각 네트워크 영역에서는 정상적으로 동작해야 한다.
 
-
-![cap.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/3b953ad7-a4bc-4b8b-877c-db94279d5db4/25988c23-ed46-4da7-a618-33ba82728da9/cap.png)
+![Untitled](/assets/img/post/데이터베이스%20정리/2.png)
 
 
 [이미지 출처: [https://www.geeksforgeeks.org/the-cap-theorem-in-dbms/](https://www.geeksforgeeks.org/the-cap-theorem-in-dbms/)]
